--- a/src/Infrastructure/REA.Accounting.Infrastructure.csproj
+++ b/src/Infrastructure/REA.Accounting.Infrastructure.csproj
@@ -17,7 +17,8 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="Mapster" Version="7.2.0" />        
+    <PackageReference Include="Mapster" Version="7.2.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />        
   </ItemGroup>
 
   <ItemGroup>
