--- a/src/Infrastructure/REA.Accounting.Infrastructure.csproj
+++ b/src/Infrastructure/REA.Accounting.Infrastructure.csproj
@@ -7,7 +7,9 @@
     <RootNamespace>REA.Accounting.Infrastructure</RootNamespace>
   </PropertyGroup>
 
-  <ItemGroup>    
+  <ItemGroup>
+    <PackageReference Include="Ardalis.Specification" Version="6.1.0" />
+    <PackageReference Include="Ardalis.Specification.EntityFrameworkCore" Version="6.1.0" />    
     <PackageReference Include="Dapper" Version="2.0.123" />
     <PackageReference Include="EntityFrameworkCore.SqlServer.HierarchyId" Version="3.0.0" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.0.0" />
