Fixed HasColumnType errors in efcore config files

--- a/src/Server/appsettings.json
+++ b/src/Server/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Kestrel": {
+    "EndpointDefaults": {
+      "Protocols": "Http1AndHttp2"
+    }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=tcp:mssql-server,1433;Database=AdventureWorks_Dev;User Id=sa;Password=Info99Gum;MultipleActiveResultSets=true;TrustServerCertificate=true"
+  }
 }
