--- a/test/IntegrationTests/REA.Accounting.IntegrationTest.csproj
+++ b/test/IntegrationTests/REA.Accounting.IntegrationTest.csproj
@@ -9,6 +9,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+      <None Include="integrationsettings.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+  </ItemGroup>
+  
+  <ItemGroup>
     <PackageReference Include="Moq" Version="4.18.2" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="6.0.9" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
