--- a/src/Application/REA.Accounting.Application.csproj
+++ b/src/Application/REA.Accounting.Application.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="MediatR" Version="10.0.1" />
+    <PackageReference Include="FluentValidation" Version="11.1.0" />
   </ItemGroup>
 
   <ItemGroup>
