Configured nlog to log to relative path on Windows and Linux

--- a/src/Core/REA.Accounting.Core.csproj
+++ b/src/Core/REA.Accounting.Core.csproj
@@ -1,9 +1,5 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <ItemGroup>
-    <ProjectReference Include="..\SharedKernel\REA.Accounting.SharedKernel.csproj" />
-  </ItemGroup>
-
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
@@ -11,4 +7,12 @@
     <RootNamespace>REA.Accounting.Core</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MediatR.Contracts" Version="1.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SharedKernel\REA.Accounting.SharedKernel.csproj" />
+  </ItemGroup>
+  
 </Project>
