--- a/src/Server/REA.Accounting.Server.csproj
+++ b/src/Server/REA.Accounting.Server.csproj
@@ -12,6 +12,8 @@
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1" />
     <PackageReference Include="FluentValidation" Version="11.1.0" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.1.0" />
+    <PackageReference Include="NLog.Web.AspNetCore" Version="5.0.0" />
+    <PackageReference Include="NLog" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
