NLog configuration is working

--- a/src/Server/nlog.config
+++ b/src/Server/nlog.config
@@ -19,7 +19,7 @@
         <target name="ownFile-web" 
                 xsi:type="File" 
                 fileName="${gdc:item=logDirectory}/logs/nlog-AspNetCore-own-${shortdate}.log"
-                layout="${longdate}|${event-properties:item=EventId:whenEmpty=0}|${level:uppercase=true}|${logger}|${message} ${exception:format=tostring}|url: ${aspnet-request-url}|action: ${aspnet-mvc-action}|${callsite}" />                
+                layout="${longdate}|${event-properties:item=EventId:whenEmpty=0}|${level:uppercase=true}|${logger}|${message} ${exception:format=tostring}|url: ${aspnet-request-url}|${callsite}" />                
         <target name="lifetimeConsole" 
                 xsi:type="Console" 
                 layout="${MicrosoftConsoleLayout}" />
