Unit tested CompanyCommandHandler

--- a/src/Application/REA.Accounting.Application.csproj
+++ b/src/Application/REA.Accounting.Application.csproj
@@ -18,5 +18,16 @@
     <ProjectReference Include="..\Shared\REA.Accounting.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+        <_Parameter1>REA.Accounting.IntegrationTests</_Parameter1>
+    </AssemblyAttribute>
+  </ItemGroup>
+  <ItemGroup>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+        <_Parameter1>REA.Accounting.UnitTests</_Parameter1>
+    </AssemblyAttribute>
+  </ItemGroup>
+
 </Project>
 
