--- a/src/Client/REA.Accounting.Client.csproj
+++ b/src/Client/REA.Accounting.Client.csproj
@@ -10,6 +10,17 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.11" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.11" PrivateAssets="all" />
+    <PackageReference Include="FluentValidation" Version="11.1.0" />
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.1.0" />
+    <PackageReference Include="Blazorise.FluentValidation" Version="1.0.4" />
+    <PackageReference Include="Blazorise" Version="1.0.6" />
+    <PackageReference Include="Blazorise.Bootstrap5" Version="1.0.6" />
+    <PackageReference Include="Blazorise.DataGrid" Version="1.0.6" />
+    <PackageReference Include="Blazorise.Components" Version="1.0.6" />
+    <PackageReference Include="Blazorise.Snackbar" Version="1.0.6" />
+    <PackageReference Include="Blazorise.Icons.FontAwesome" Version="1.0.6" />
+    <PackageReference Include="Fluxor.Blazor.Web" Version="5.4.0" />
+    <PackageReference Include="Fluxor.Blazor.Web.ReduxDevTools" Version="5.4.0" />            
   </ItemGroup>
 
   <ItemGroup>
