--- a/src/Server/REA.Accounting.Server.csproj
+++ b/src/Server/REA.Accounting.Server.csproj
@@ -14,6 +14,9 @@
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.1.0" />
     <PackageReference Include="NLog.Web.AspNetCore" Version="5.0.0" />
     <PackageReference Include="NLog" Version="5.0.0" />
+    <PackageReference Include="Grpc.AspNetCore" Version="2.49.0" />
+    <PackageReference Include="Grpc.AspNetCore.Web" Version="2.49.0" />
+    <PackageReference Include="Grpc.AspNetCore.Server.Reflection" Version="2.49.0" />     
   </ItemGroup>
 
   <ItemGroup>
@@ -21,7 +24,8 @@
     <ProjectReference Include="..\Shared\REA.Accounting.Shared.csproj" />
     <ProjectReference Include="..\Application\REA.Accounting.Application.csproj" />
     <ProjectReference Include="..\Infrastructure\REA.Accounting.Infrastructure.csproj" />
-    <ProjectReference Include="..\Presentation\Presentation.csproj" />    
+    <ProjectReference Include="..\Presentation\Presentation.csproj" />
+    <ProjectReference Include="..\gRPC.Contracts\gRPC.Contracts.csproj" />    
   </ItemGroup>
 
 </Project>
