--- a/src/Client/REA.Accounting.Client.csproj
+++ b/src/Client/REA.Accounting.Client.csproj
@@ -20,11 +20,14 @@
     <PackageReference Include="Blazorise.Snackbar" Version="1.0.6" />
     <PackageReference Include="Blazorise.Icons.FontAwesome" Version="1.0.6" />
     <PackageReference Include="Fluxor.Blazor.Web" Version="5.4.0" />
-    <PackageReference Include="Fluxor.Blazor.Web.ReduxDevTools" Version="5.4.0" />            
+    <PackageReference Include="Fluxor.Blazor.Web.ReduxDevTools" Version="5.4.0" />
+    <PackageReference Include="Grpc.Net.Client" Version="2.49.0" />
+    <PackageReference Include="Grpc.Net.Client.Web" Version="2.49.0" />                 
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Shared\REA.Accounting.Shared.csproj" />
+    <ProjectReference Include="..\gRPC.Contracts\gRPC.Contracts.csproj" />
   </ItemGroup>
 
 </Project>
