Added error handling and logging to grpc endpoints

--- a/src/Server/appsettings.Development.json
+++ b/src/Server/appsettings.Development.json
@@ -1,8 +1,19 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Trace",
+            "Microsoft.AspNetCore": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information",
+            "Grpc": "Debug"
+        }
+    },
+    "AllowedHosts": "*",
+    "Kestrel": {
+        "EndpointDefaults": {
+            "Protocols": "Http1AndHttp2"
+        }
+    },
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=tcp:mssql-server,1433;Database=AdventureWorks_Dev;User Id=sa;Password=Info99Gum;MultipleActiveResultSets=true;TrustServerCertificate=true"
     }
-  }
 }
