--- a/src/Server/appsettings.json
+++ b/src/Server/appsettings.json
@@ -1,18 +1,18 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Trace",
-      "Microsoft.AspNetCore": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information"
+        }
+    },
+    "AllowedHosts": "*",
+    "Kestrel": {
+        "EndpointDefaults": {
+            "Protocols": "Http1AndHttp2"
+        }
+    },
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=tcp:mssql-server,1433;Database=AdventureWorks_Dev;User Id=sa;Password=Info99Gum;MultipleActiveResultSets=true;TrustServerCertificate=true"
     }
-  },
-  "AllowedHosts": "*",
-  "Kestrel": {
-    "EndpointDefaults": {
-      "Protocols": "Http1AndHttp2"
-    }
-  },
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:mssql-server,1433;Database=AdventureWorks_Dev;User Id=sa;Password=Info99Gum;MultipleActiveResultSets=true;TrustServerCertificate=true"
-  }
 }
