--- a/src/Server/nlog.config
+++ b/src/Server/nlog.config
@@ -27,15 +27,15 @@
 
     <rules>
         <!--All logs, including from Microsoft-->
-        <logger name="*" minlevel="Trace" writeTo="allfile" />
+        <logger name="*" minlevel="Debug" writeTo="allfile" />
 
         <!--Output hosting lifetime messages to console target for faster startup detection -->
-        <logger name="Microsoft.Hosting.Lifetime" minlevel="Info" writeTo="lifetimeConsole, ownFile-web" final="true" />
+        <logger name="Microsoft.Hosting.Lifetime" minlevel="Debug" writeTo="lifetimeConsole, ownFile-web" final="true" />
 
         <!--Skip non-critical Microsoft logs and so log only own logs (BlackHole) -->
         <logger name="Microsoft.*" maxlevel="Info" final="true" />
         <logger name="System.Net.Http.*" maxlevel="Info" final="true" />
 
-        <logger name="*" minlevel="Trace" writeTo="ownFile-web" />
+        <logger name="*" minlevel="Debug" writeTo="ownFile-web" />
     </rules>
 </nlog>
