--- a/src/gRPC.Contracts/gRPC.Contracts.csproj
+++ b/src/gRPC.Contracts/gRPC.Contracts.csproj
@@ -17,9 +17,10 @@
   </ItemGroup>
 
 	<ItemGroup>
-		<Protobuf Include="shared.proto" />
-		<Protobuf Include="company.proto" />
+		<Protobuf Include="Protos/Shared/shared.proto" />
         <Protobuf Include="Protos/Lookups/lookups.proto" />
+        <Protobuf Include="Protos/Organization/company.proto" />
+        <Protobuf Include="Protos/Organization/grpc_department.proto" />
 	</ItemGroup>
 
 </Project>
