Added GetCompanyDepartments and GetCompanyShifts to Company grpc endpoint

--- a/.editorconfig
+++ b/.editorconfig
@@ -16,6 +16,7 @@ dotnet_diagnostic.CA2254.severity = silent
 dotnet_diagnostic.RCS1175.severity = none
 dotnet_diagnostic.RCS1036.severity = none
 dotnet_diagnostic.RCS1037.severity = none
+dotnet_diagnostic.RCS1093.severity = silent
 
 [GuardAgainst*.cs]
 dotnet_diagnostic.IDE0060.severity = none
