--- a/src/Client/REA.Accounting.Client.csproj
+++ b/src/Client/REA.Accounting.Client.csproj
@@ -24,7 +24,8 @@
     <PackageReference Include="Fluxor.Blazor.Web.ReduxDevTools" Version="5.7.0" />
     <PackageReference Include="Grpc.Net.Client" Version="2.49.0" />
     <PackageReference Include="Grpc.Net.Client.Web" Version="2.49.0" />
-    <PackageReference Include="Mapster" Version="7.3.0" />                 
+    <PackageReference Include="Mapster" Version="7.3.0" />
+    <PackageReference Include="Mapster.DependencyInjection" Version="1.0.0" />                 
   </ItemGroup>
 
   <ItemGroup>
