--- a/src/Server/REA.Accounting.Server.csproj
+++ b/src/Server/REA.Accounting.Server.csproj
@@ -16,7 +16,9 @@
     <PackageReference Include="NLog" Version="5.0.0" />
     <PackageReference Include="Grpc.AspNetCore" Version="2.49.0" />
     <PackageReference Include="Grpc.AspNetCore.Web" Version="2.49.0" />
-    <PackageReference Include="Grpc.AspNetCore.Server.Reflection" Version="2.49.0" />     
+    <PackageReference Include="Grpc.AspNetCore.Server.Reflection" Version="2.49.0" />
+    <PackageReference Include="Mapster" Version="7.3.0" />
+    <PackageReference Include="Mapster.DependencyInjection" Version="1.0.0" />          
   </ItemGroup>
 
   <ItemGroup>
