Added endpoint and queryhandler for GetEmployeeListItems request

--- a/src/gRPC.Contracts/gRPC.Contracts.csproj
+++ b/src/gRPC.Contracts/gRPC.Contracts.csproj
@@ -22,6 +22,7 @@
         <Protobuf Include="Protos/Organization/company.proto" />
         <Protobuf Include="Protos/Organization/grpc_department.proto" />
         <Protobuf Include="Protos/Organization/grpc_shift.proto" />
+        <Protobuf Include="Protos/HumanResources/grpc_employee.proto" />
 	</ItemGroup>
     
 </Project>
